--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,11 @@ table {
   --4-yellow: rgba( 85, 55,  0,1);
 
   --0-orange: rgba(170, 98, 57,1);
-  --1-orange: rgba(255,201,170,1);
+  --1-orange: rgba(255, 201,170,1);
   --2-orange: rgba(212,145,106,1);
-  --3-orange: rgba(128, 60, 21,1);
-  --4-orange: rgba( 85, 31,  0,1);
+  --3-orange: rgba(128, 60,21,1);
+  --4-orange: rgba(85, 31, 0, 1);
+  --5-orange: rgba(91, 36, 5, 1);
 }
 
 #root {
